feat: add pagination to the pets page

--- a/pages/pets/index.html
+++ b/pages/pets/index.html
@@ -106,89 +106,22 @@
             /></span>
           </div>
         </div>
-        <div class="cards">
-          <!-- single card -->
-          <div class="single-card">
-            <img
-              src="../../assets/images/pets-katrine.png"
-              alt="pets-katrine"
-            />
-            <h3>katrine</h3>
-            <a href="#">Learn more</a>
-          </div>
-          <!-- end of single card -->
-          <!-- single card -->
-          <div class="single-card">
-            <img
-              src="../../assets/images/pets-jennifer.png"
-              alt="pets-jennifer"
-            />
-            <h3>jennifer</h3>
-            <a href="#">Learn more</a>
-          </div>
-          <!-- end of single card -->
-          <!-- single card -->
-          <div class="single-card">
-            <img src="../../assets/images/pets-woody.png" alt="pets-woody" />
-            <h3>woody</h3>
-            <a href="#">Learn more</a>
-          </div>
-          <!-- end of single card -->
-          <!-- single card -->
-          <div class="single-card">
-            <img src="../../assets/images/pets-sophia.png" alt="pets-sophia" />
-            <h3>sophia</h3>
-            <a href="#">Learn more</a>
-          </div>
-          <!-- end of single card -->
-          <!-- single card -->
-          <div class="single-card">
-            <img src="../../assets/images/pets-timmy.png" alt="pets-timmy" />
-            <h3>timmy</h3>
-            <a href="#">Learn more</a>
-          </div>
-          <!-- end of single card -->
-          <!-- single card -->
-          <div class="single-card">
-            <img src="../../assets/images/pets-charly.png" alt="pets-charly" />
-            <h3>charly</h3>
-            <a href="#">Learn more</a>
-          </div>
-          <!-- end of single card -->
-          <!-- single card -->
-          <div class="single-card">
-            <img
-              src="../../assets/images/pets-scarlett.png"
-              alt="pets-scarlet"
-            />
-            <h3>scarlett</h3>
-            <a href="#">Learn more</a>
-          </div>
-          <!-- end of single card -->
-          <!-- single card -->
-          <div class="single-card">
-            <img
-              src="../../assets/images/pets-freddie.png"
-              alt="pets-freddie"
-            />
-            <h3>freddie</h3>
-            <a href="#">Learn more</a>
-          </div>
-          <!-- end of single card -->
-        </div>
+        <div class="cards"></div>
         <!-- pagination -->
         <div class="pagination">
-          <button type="button" disabled data-disabled>
+          <button type="button" class="first-btn">
             <i class="fa-solid fa-angles-left"></i>
           </button>
-          <button type="button" disabled data-disabled>
+          <button type="button" class="previous-btn">
             <i class="fa-solid fa-angle-left"></i>
           </button>
-          <button type="button">1</button>
-          <button type="button">
+
+          <button type="button" class="current-page">1</button>
+
+          <button type="button" class="next-btn">
             <i class="fa-solid fa-angle-right"></i>
           </button>
-          <button type="button">
+          <button type="button" class="last-btn">
             <i class="fa-solid fa-angles-right"></i>
           </button>
         </div>
