feat: add carousel function to the main page

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -149,30 +149,7 @@
         </div>
       </div>
       <div class="friends-center">
-        <!-- single card -->
-        <div class="single-card">
-          <img src="../../assets/images/pets-katrine.png" alt="pets-katrine" />
-          <h1>katrine</h1>
-          <a href="#">Learn more</a>
-        </div>
-        <!-- end of single card -->
-        <!-- single card -->
-        <div class="single-card">
-          <img
-            src="../../assets/images/pets-jennifer.png"
-            alt="pets-jennifer"
-          />
-          <h1>jennifer</h1>
-          <a href="#">Learn more</a>
-        </div>
-        <!-- end of single card -->
-        <!-- single card -->
-        <div class="single-card">
-          <img src="../../assets/images/pets-woody.png" alt="pets-woody" />
-          <h1>woody</h1>
-          <a href="#">Learn more</a>
-        </div>
-        <!-- end of single card -->
+        <div class="card-container"></div>
 
         <!-- left button -->
         <button class="left-btn">
